# test_icreate

./: README.md  pyproject.toml  requirements.txt
app/: database.py  main.py  models.py  oauth2.py  router.py  schemas.py  utils.py
app/core/: config.py
tests/: factories.py  test_router.py
